// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a list of webhook endpoints that have been configured 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <span
          className="SvgIcon-root SvgIcon-md ExperimentalCallOut-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.72601 0.75H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 8.25V0.75H8.22603V8.25L1.48903 18.615C1.1949 19.0675 1.02828 19.5909 1.00673 20.1302C0.985172 20.6694 1.10948 21.2045 1.36655 21.679C1.62362 22.1535 2.00393 22.5499 2.4674 22.8264C2.93088 23.1029 3.46035 23.2492 4.00003 23.25H19.948C20.488 23.2499 21.018 23.1041 21.4821 22.8279C21.9461 22.5517 22.327 22.1554 22.5846 21.6808C22.8421 21.2061 22.9668 20.6708 22.9454 20.1312C22.924 19.5916 22.7573 19.0678 22.463 18.615L15.726 8.25Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M5.30103 12.75H18.651"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M14.226 17.25H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 15.75V18.75"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 3.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 6.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M6.72601 19.875C6.51891 19.875 6.35101 19.7071 6.35101 19.5C6.35101 19.2929 6.51891 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <path
              d="M6.72601 19.875C6.93312 19.875 7.10101 19.7071 7.10101 19.5C7.10101 19.2929 6.93312 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <g>
              <path
                d="M9.72601 16.875C9.51891 16.875 9.35101 16.7071 9.35101 16.5C9.35101 16.2929 9.51891 16.125 9.72601 16.125"
                stroke="currentColor"
              />
              <path
                d="M9.72601 16.875C9.93312 16.875 10.101 16.7071 10.101 16.5C10.101 16.2929 9.93312 16.125 9.72601 16.125"
                stroke="currentColor"
              />
            </g>
          </svg>
        </span>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0.75 12L23.25 12"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
              <path
                d="M12 0.75L12 23.25"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <table
          className="Table-root Table-fullWidth"
        >
          <thead
            className="TableHead-root"
          >
            <tr
              className="TableRow-root"
            >
              <th
                className="TableCell-root TableCell-header"
              >
                URL
              </th>
              <th
                className="TableCell-root TableCell-header"
              >
                Status
              </th>
              <th
                className="TableCell-root TableCell-header"
              />
            </tr>
          </thead>
          <tbody
            className="TableBody-root"
          >
            <tr
              className="TableRow-root TableRow-body"
              data-testid="webhook-endpoint-webhook-endpoint-1"
            >
              <td
                className="TableCell-root WebhookEndpointRow-urlColumn TableCell-body"
              >
                http://example.com/webhook-endpoint-1
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <span
                  className="Marker-root StatusMarker-success Marker-colorPending Marker-variantRegular"
                >
                  Enabled
                </span>
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                >
                  <a
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconRight"
                    data-variant="text"
                    href="/admin/configure/webhooks/endpoint/webhook-endpoint-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    Details 
                    <span
                      className="SvgIcon-root SvgIcon-xxs WebhookEndpointRow-detailsIcon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                    >
                      <svg
                        viewBox="-0.25 -0.25 24.5 24.5"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.5.75,16.22,11.47a.749.749,0,0,1,0,1.06L5.5,23.25"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </span>
                  </a>
                </div>
              </td>
            </tr>
            <tr
              className="TableRow-root TableRow-body"
              data-testid="webhook-endpoint-webhook-endpoint-2"
            >
              <td
                className="TableCell-root WebhookEndpointRow-urlColumn TableCell-body"
              >
                http://example.com/webhook-endpoint-2
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <span
                  className="Marker-root StatusMarker-error Marker-colorPending Marker-variantRegular"
                >
                  Disabled
                </span>
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                >
                  <a
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconRight"
                    data-variant="text"
                    href="/admin/configure/webhooks/endpoint/webhook-endpoint-2"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    Details 
                    <span
                      className="SvgIcon-root SvgIcon-xxs WebhookEndpointRow-detailsIcon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                    >
                      <svg
                        viewBox="-0.25 -0.25 24.5 24.5"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.5.75,16.22,11.47a.749.749,0,0,1,0,1.06L5.5,23.25"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </span>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`goes to add new webhook endpoint when clicking add 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <span
          className="SvgIcon-root SvgIcon-md ExperimentalCallOut-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.72601 0.75H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 8.25V0.75H8.22603V8.25L1.48903 18.615C1.1949 19.0675 1.02828 19.5909 1.00673 20.1302C0.985172 20.6694 1.10948 21.2045 1.36655 21.679C1.62362 22.1535 2.00393 22.5499 2.4674 22.8264C2.93088 23.1029 3.46035 23.2492 4.00003 23.25H19.948C20.488 23.2499 21.018 23.1041 21.4821 22.8279C21.9461 22.5517 22.327 22.1554 22.5846 21.6808C22.8421 21.2061 22.9668 20.6708 22.9454 20.1312C22.924 19.5916 22.7573 19.0678 22.463 18.615L15.726 8.25Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M5.30103 12.75H18.651"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M14.226 17.25H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 15.75V18.75"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 3.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 6.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M6.72601 19.875C6.51891 19.875 6.35101 19.7071 6.35101 19.5C6.35101 19.2929 6.51891 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <path
              d="M6.72601 19.875C6.93312 19.875 7.10101 19.7071 7.10101 19.5C7.10101 19.2929 6.93312 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <g>
              <path
                d="M9.72601 16.875C9.51891 16.875 9.35101 16.7071 9.35101 16.5C9.35101 16.2929 9.51891 16.125 9.72601 16.125"
                stroke="currentColor"
              />
              <path
                d="M9.72601 16.875C9.93312 16.875 10.101 16.7071 10.101 16.5C10.101 16.2929 9.93312 16.125 9.72601 16.125"
                stroke="currentColor"
              />
            </g>
          </svg>
        </span>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0.75 12L23.25 12"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
              <path
                d="M12 0.75L12 23.25"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <div
          className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
        >
          <div
            className="CallOut-inner"
          >
            There are no webhook endpoints configured, add one above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`goes to the webhook endpoint configuration page when selected 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <span
          className="SvgIcon-root SvgIcon-md ExperimentalCallOut-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.72601 0.75H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 8.25V0.75H8.22603V8.25L1.48903 18.615C1.1949 19.0675 1.02828 19.5909 1.00673 20.1302C0.985172 20.6694 1.10948 21.2045 1.36655 21.679C1.62362 22.1535 2.00393 22.5499 2.4674 22.8264C2.93088 23.1029 3.46035 23.2492 4.00003 23.25H19.948C20.488 23.2499 21.018 23.1041 21.4821 22.8279C21.9461 22.5517 22.327 22.1554 22.5846 21.6808C22.8421 21.2061 22.9668 20.6708 22.9454 20.1312C22.924 19.5916 22.7573 19.0678 22.463 18.615L15.726 8.25Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M5.30103 12.75H18.651"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M14.226 17.25H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 15.75V18.75"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 3.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 6.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M6.72601 19.875C6.51891 19.875 6.35101 19.7071 6.35101 19.5C6.35101 19.2929 6.51891 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <path
              d="M6.72601 19.875C6.93312 19.875 7.10101 19.7071 7.10101 19.5C7.10101 19.2929 6.93312 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <g>
              <path
                d="M9.72601 16.875C9.51891 16.875 9.35101 16.7071 9.35101 16.5C9.35101 16.2929 9.51891 16.125 9.72601 16.125"
                stroke="currentColor"
              />
              <path
                d="M9.72601 16.875C9.93312 16.875 10.101 16.7071 10.101 16.5C10.101 16.2929 9.93312 16.125 9.72601 16.125"
                stroke="currentColor"
              />
            </g>
          </svg>
        </span>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0.75 12L23.25 12"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
              <path
                d="M12 0.75L12 23.25"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <table
          className="Table-root Table-fullWidth"
        >
          <thead
            className="TableHead-root"
          >
            <tr
              className="TableRow-root"
            >
              <th
                className="TableCell-root TableCell-header"
              >
                URL
              </th>
              <th
                className="TableCell-root TableCell-header"
              >
                Status
              </th>
              <th
                className="TableCell-root TableCell-header"
              />
            </tr>
          </thead>
          <tbody
            className="TableBody-root"
          >
            <tr
              className="TableRow-root TableRow-body"
              data-testid="webhook-endpoint-webhook-endpoint-1"
            >
              <td
                className="TableCell-root WebhookEndpointRow-urlColumn TableCell-body"
              >
                http://example.com/webhook-endpoint-1
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <span
                  className="Marker-root StatusMarker-success Marker-colorPending Marker-variantRegular"
                >
                  Enabled
                </span>
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                >
                  <a
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconRight"
                    data-variant="text"
                    href="/admin/configure/webhooks/endpoint/webhook-endpoint-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    Details 
                    <span
                      className="SvgIcon-root SvgIcon-xxs WebhookEndpointRow-detailsIcon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                    >
                      <svg
                        viewBox="-0.25 -0.25 24.5 24.5"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.5.75,16.22,11.47a.749.749,0,0,1,0,1.06L5.5,23.25"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </span>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders webhooks 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <span
          className="SvgIcon-root SvgIcon-md ExperimentalCallOut-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.72601 0.75H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 8.25V0.75H8.22603V8.25L1.48903 18.615C1.1949 19.0675 1.02828 19.5909 1.00673 20.1302C0.985172 20.6694 1.10948 21.2045 1.36655 21.679C1.62362 22.1535 2.00393 22.5499 2.4674 22.8264C2.93088 23.1029 3.46035 23.2492 4.00003 23.25H19.948C20.488 23.2499 21.018 23.1041 21.4821 22.8279C21.9461 22.5517 22.327 22.1554 22.5846 21.6808C22.8421 21.2061 22.9668 20.6708 22.9454 20.1312C22.924 19.5916 22.7573 19.0678 22.463 18.615L15.726 8.25Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M5.30103 12.75H18.651"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M14.226 17.25H17.226"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 15.75V18.75"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 3.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15.726 6.75H12.726"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M6.72601 19.875C6.51891 19.875 6.35101 19.7071 6.35101 19.5C6.35101 19.2929 6.51891 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <path
              d="M6.72601 19.875C6.93312 19.875 7.10101 19.7071 7.10101 19.5C7.10101 19.2929 6.93312 19.125 6.72601 19.125"
              stroke="currentColor"
            />
            <g>
              <path
                d="M9.72601 16.875C9.51891 16.875 9.35101 16.7071 9.35101 16.5C9.35101 16.2929 9.51891 16.125 9.72601 16.125"
                stroke="currentColor"
              />
              <path
                d="M9.72601 16.875C9.93312 16.875 10.101 16.7071 10.101 16.5C10.101 16.2929 9.93312 16.125 9.72601 16.125"
                stroke="currentColor"
              />
            </g>
          </svg>
        </span>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0.75 12L23.25 12"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
              <path
                d="M12 0.75L12 23.25"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <div
          className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
        >
          <div
            className="CallOut-inner"
          >
            There are no webhook endpoints configured, add one above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
